--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Default Template</title>
+    <title>Hash Map</title>
 </head>
 <body>
-    <h1 class="title">Default Template</h1>
+    <h1 class="title">Hash Map</h1>
 </body>
 </html>
